<resources>
    <string name="app_name">Contacts</string>
    <string name="sign_in">Sign In</string>
    <string name="contacts_app">Contacts App</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="add_contact">Add Contact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="save_contact">Save Contact</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="contacts">Contacts</string>
    <string name="you_have_no_contacts_press_to_add">You Have No Contacts Press + To Add</string>
    <string name="contact_info">Contact Info</string>
    <string name="call">Call</string>
    <string name="delete">Delete</string>
</resources>